# slide-deduper

./: .gitignore  LICENSE  README.md  pyproject.toml
slide_deduper/: __init__.py  cli.py  dedupe.py  group.py  inspect.py
tests/: test_grouping.py
